--- a/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
+++ b/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
@@ -24,7 +24,7 @@
       </ImageView>
       <AnchorPane fx:id="ap" prefHeight="744.0" prefWidth="1117.0" stylesheets="@Style.css">
          <children>
-            <Button fx:id="restartbtn" layoutX="870.0" layoutY="513.0" mnemonicParsing="false" onAction="#pauseGameRequest" prefHeight="72.0" prefWidth="222.0" text="Pause" />
+            <Button fx:id="pausebtn" layoutX="870.0" layoutY="513.0" mnemonicParsing="false" onAction="#pauseGameRequest" prefHeight="72.0" prefWidth="222.0" text="Pause" />
             <BorderPane layoutX="826.0" layoutY="26.0" prefHeight="350.0" prefWidth="285.0">
                <top>
                   <Label fx:id="rightPlayerName" alignment="CENTER" contentDisplay="CENTER" prefHeight="58.0" prefWidth="284.0" style="-fx-background-color: transparent;" text="Player 2 Name" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
