--- a/TicTacToe/src/views/Server/Server.fxml
+++ b/TicTacToe/src/views/Server/Server.fxml
@@ -17,17 +17,18 @@
             <Image url="@bc.png" />
          </image>
       </ImageView>
-      <TableView fx:id="tableView" layoutX="9.0" layoutY="16.0" prefHeight="426.0" prefWidth="301.0" style="-fx-border-color: white;" visible="false">
+      <TableView fx:id="tableView" layoutX="9.0" layoutY="16.0" prefHeight="426.0" prefWidth="403.0" style="-fx-border-color: white;" visible="false">
         <columns>
-          <TableColumn fx:id="name" prefWidth="199.0" text="Name" />
-          <TableColumn fx:id="status" prefWidth="100.0" text="Status" />
+          <TableColumn fx:id="name" prefWidth="191.0" text="Name" />
+          <TableColumn fx:id="status" prefWidth="102.0" text="Status" />
+            <TableColumn fx:id="score" prefWidth="108.0" text="Score" />
         </columns>
       </TableView>
       <Label fx:id="lblonstatus" alignment="CENTER" layoutX="119.0" layoutY="472.0" prefHeight="36.0" prefWidth="665.0" style="-fx-text-fill: white;" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font></Label>
-      <Button fx:id="offbtn" layoutX="697.0" layoutY="210.0" mnemonicParsing="false" onAction="#stopServer" prefHeight="59.0" prefWidth="118.0" style="-fx-background-color: #39b5ff;" text="OFF" textFill="WHITE">
+      <Button fx:id="offbtn" disable="true" layoutX="697.0" layoutY="210.0" mnemonicParsing="false" onAction="#stopServer" prefHeight="59.0" prefWidth="118.0" style="-fx-background-color: #39b5ff;" text="OFF" textFill="WHITE">
          <font>
             <Font name="System Bold" size="31.0" />
          </font>
@@ -39,7 +40,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="showbtn" layoutX="559.0" layoutY="344.0" mnemonicParsing="false" onAction="#fillList" prefHeight="59.0" prefWidth="256.0" style="-fx-background-color: #39b5ff;" text="Show Players" textFill="WHITE">
+      <Button fx:id="showbtn" disable="true" layoutX="559.0" layoutY="344.0" mnemonicParsing="false" onAction="#fillList" prefHeight="59.0" prefWidth="256.0" style="-fx-background-color: #39b5ff;" text="Show Players" textFill="WHITE">
          <font>
             <Font name="System Bold" size="31.0" />
          </font>
