--- a/TicTacToe/src/views/StartPage/SignIn.fxml
+++ b/TicTacToe/src/views/StartPage/SignIn.fxml
@@ -11,11 +11,11 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="688.0" prefWidth="1170.0" style="-fx-background-color: #075EEA;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StartPage.SignInController">
+<AnchorPane id="AnchorPane" prefHeight="638.0" prefWidth="1159.0" style="-fx-background-color: linear-gradient(to right,#075EEA, #FFFFFF);" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.StartPage.SignInController">
     <children>
       <AnchorPane prefHeight="690.0" prefWidth="562.0">
          <children>
-            <ImageView fitHeight="690.0" fitWidth="578.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="696.0" fitWidth="562.0" layoutX="-1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/BGS.png" />
                </image>
@@ -24,7 +24,7 @@
       </AnchorPane>
       <AnchorPane layoutX="560.0">
          <children>
-            <AnchorPane id="anchorPane" prefHeight="690.0" prefWidth="610.0" style="-fx-background-color: #ffffff;">
+            <AnchorPane id="anchorPane" prefHeight="690.0" prefWidth="599.0" style="-fx-background-color: #ffffff;">
                <children>
                   <Label fx:id="log" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" layoutX="229.0" layoutY="31.0" prefHeight="58.0" prefWidth="144.0" stylesheets="@newCascadeStyleSheet.css" text="Login" textFill="WHITE">
                      <font>
