--- a/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
+++ b/TicTacToe/src/views/MultiPlayer/MultiPlayer.fxml
@@ -15,14 +15,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="744.0" prefWidth="1117.0" style="-fx-background-color: #162C60;" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MultiPlayer.MultiPlayerController">
+<AnchorPane id="AnchorPane" prefHeight="744.0" prefWidth="1117.0" style="-fx-background-color: #162C60;" stylesheets="@../Images/MultiRoom.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.MultiPlayer.MultiPlayerController">
    <children>
       <ImageView fitHeight="744.0" fitWidth="1130.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@testsvg.png" />
+            <Image url="@../Images/testsvg.png" />
          </image>
       </ImageView>
-      <AnchorPane fx:id="ap" prefHeight="744.0" prefWidth="1117.0" stylesheets="@Style.css">
+      <AnchorPane fx:id="ap" prefHeight="744.0" prefWidth="1117.0" stylesheets="@../Images/MultiRoom.css">
          <children>
             <Button fx:id="pausebtn" layoutX="870.0" layoutY="513.0" mnemonicParsing="false" onAction="#pauseGameRequest" prefHeight="72.0" prefWidth="222.0" text="Pause" />
             <BorderPane layoutX="826.0" layoutY="26.0" prefHeight="350.0" prefWidth="285.0">
@@ -35,7 +35,7 @@
                <center>
                   <ImageView fx:id="Sicon" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                      <image>
-                        <Image url="@boy.png" />
+                        <Image url="@../Images/boy.png" />
                      </image></ImageView>
                </center>
                <bottom>
@@ -115,7 +115,7 @@
                <center>
                   <ImageView fx:id="Micon" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                      <image>
-                        <Image url="@boy.png" />
+                        <Image url="@../Images/boy.png" />
                      </image>
                   </ImageView>
                </center>
@@ -131,7 +131,7 @@
                      </font></Label>
                </top>
                <center>
-                  <TextArea fx:id="chattxt" editable="false" prefHeight="444.0" prefWidth="266.0" stylesheets="@Style.css" text="&#10;" BorderPane.alignment="CENTER">
+                  <TextArea fx:id="chattxt" editable="false" prefHeight="444.0" prefWidth="266.0" text="&#10;" BorderPane.alignment="CENTER">
                      <font>
                         <Font size="24.0" />
                      </font></TextArea>
@@ -144,7 +144,7 @@
                            <graphic>
                               <ImageView fitHeight="19.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@android-send_icon-icons.com_50500.png" />
+                                    <Image url="@../Images/android-send_icon-icons.com_50500.png" />
                                  </image>
                               </ImageView>
                            </graphic>
